# blitzcrank

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  compose.yaml  pyproject.toml
.github/workflows/: python.yaml  release.yaml
app/: simple-crewai.py
app/crewai-101/: ollama-crewai.py
app/crewai_101/: ollama-crewai.py  simple-crewai.py
app/daily-news/: .env.example  agents.py  main.py  news_service.py  tasks.py
app/daily_news/: agents.py  service.py  tasks.py
app/daily_news/tools/: markdown.py
app/simple_chat/: crew.py
app/talent_assist/: README.md  crew.py  main.py
app/talent_assist/src/talent_assist/: main.py
app/utils/: github.py
app/writer_agent/: service.py
deployments/: cronjob.yaml
scripts/: main.py
