[tool.poetry]
name = "blitzcrank"
version = "0.1.0"
description = ""
authors = ["Sean Zheng <blackhorseya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = {extras = ["tools"], version = "^0.28.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
